--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,3 +12,30 @@
  *= require jquery.ui.all
  *= require_tree .
  */
+
+#background-image {
+  position: absolute;
+
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+
+  -webkit-filter: blur(4px);
+  background: url('blue-hospital-corridor.jpg');
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: fixed;
+
+  z-index: -1;
+}
+
+body {
+  text-align: center;
+}
+
+p {
+  color: white;
+  background-color: black;
+  opacity: .8;
+}
