Day 1 style with new bg image

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -21,8 +21,7 @@
   bottom: 0;
   right: 0;
 
-  -webkit-filter: blur(4px);
-  background: url('blue-hospital-corridor.jpg');
+  background: url(hospital_bed_blurred_camera_2.jpg);
   background-repeat: no-repeat;
   background-position: center center;
   background-attachment: fixed;
