front end changes

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,6 +13,11 @@
  *= require_tree .
  */
 
+.modal-backdrop {
+  background-color: red;
+  opacity: 0.2;
+}
+
 #background-image {
   position: absolute;
 
