hide search on click and start styling modal

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -38,3 +38,9 @@ p {
   background-color: black;
   opacity: .8;
 }
+
+#disease-result {
+  background-color: rgba(0,0,0,0.7);
+  width: 60%;
+  margin: 0 auto;
+}
