--- a/app/views/diseases/index.html.erb
+++ b/app/views/diseases/index.html.erb
@@ -4,47 +4,17 @@ Enter your symptoms:
 </p>
 <br>
 <br>
-<%= form_tag diseases_path, :remote => true, :method => :get do %>
+<%= form_tag diseases_path, :class => "search-form", :remote => true, :method => :get do %>
   <div class="ui-widget">
       <%= text_field_tag :search, params[:search], id: "tags", size: "50" %>
       <br>
-      <%= submit_tag "Search", :name => nil %>
+      <%= submit_tag "Search", :name => nil, class: "btn btn-primary btn-lg", id: "search-submit" %>
 
       <!-- :"data-toggle" => "modal", :"data-target" => "#myModal", -->
   </div>
 <% end %><br>
 
-<div id="disease-result">
-  <p>
-  zOMG. WATCH OUT AND BE CAREFUL!!!! YOU COULD HAVE:<br>
-  <%= link_to @disease_name, "http://www.wikipedia.org/#{@disease_url}", :target => "blank" %>
-  </p>
+<div id="disease-result">`
 </div>
-<br><br>
 
-<!-- Button trigger modal -->
-<button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
-  Launch demo modal
-</button>
 
-<!-- Modal -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
-      </div>
-      <div class="modal-body">
-        <p>
-zOMG. WATCH OUT AND BE CAREFUL!!!! YOU COULD HAVE:<br>
-<%= link_to @disease_name, "http://www.wikipedia.org/#{@disease_url}", :target => "blank" %>
-</p>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
-      </div>
-    </div><!-- /.modal-content -->
-  </div><!-- /.modal-dialog -->
-</div><!-- /.modal -->
