oh no, omg it looks like you could have css styling changes

--- a/app/views/diseases/index.js.erb
+++ b/app/views/diseases/index.js.erb
@@ -1,4 +1,4 @@
 $(function() {
   $(".search-form").fadeOut();
-  $("#disease-result").html('<%= j render(:partial => "disease_result") %>');
+  $("#disease-result").fadeIn().html('<%= j render(:partial => "disease_result") %>');
 });
