--- a/app/views/diseases/index.html.erb
+++ b/app/views/diseases/index.html.erb
@@ -1,10 +1,11 @@
 <br>
+<div class="search-form", >
 <p>
 Enter your symptoms:
 </p>
 <br>
 <br>
-<%= form_tag diseases_path, :class => "search-form", :remote => true, :method => :get do %>
+<%= form_tag diseases_path, :remote => true, :method => :get do %>
   <div class="ui-widget">
       <%= text_field_tag :search, params[:search], id: "tags", size: "50" %>
       <br>
@@ -13,6 +14,7 @@ Enter your symptoms:
       <!-- :"data-toggle" => "modal", :"data-target" => "#myModal", -->
   </div>
 <% end %><br>
+</div>
 
 <div id="disease-result">`
 </div>
