--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -40,7 +40,7 @@ p {
 
 #disease-result {
   background-color: rgba(0,0,0,0.7);
-  width: 50%;
+  width: 55%;
   margin: 0 auto;
   border-radius: 25px;
 }
@@ -67,4 +67,6 @@ p {
   text-align: right;
 }
 
-
+p {
+  font-size: 22px;
+}
