formatted links, added escape

--- a/app/views/diseases/_disease_result.html.erb
+++ b/app/views/diseases/_disease_result.html.erb
@@ -1,5 +1,5 @@
-<div>
-  <div class="close-out"></div>
+
+  <div class="close-out"><%= link_to "X", "/" %></div>
   <div class="result-modal">
   <p>
     <h2 class="diagnosis">OH NO. IT LOOKS LIKE YOU COULD HAVE:</h2>
@@ -9,4 +9,3 @@
   <p class="disclaimer">Disclaimer: This is a humor app. We are not real doctors, and you probably don't have this esoteric disease. But if you are really concerned, please see a real doctor.</p>
   <h3 class="try-again-link"><%= link_to "Misdiagnosed? Try again >>", "/" %></h3>
   </div>
-</div>
