--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,9 +13,24 @@
  *= require_tree .
  */
 
+a:hover {
+  text-decoration: none !important;
+}
+
+.close-out {
+  color: white;
+  text-align: right;
+  font-size: 1.5em;
+  padding-right: 2%;
+  padding-top: 2%;
+ }
+
+.close-out a {
+  color: white;
+ }
+
 #background-image {
   position: absolute;
-
   top: 0;
   left: 0;
   bottom: 0;
@@ -52,10 +67,12 @@ p {
 
 .result-modal {
   padding: 40px;
+  margin-top:-40px;
 }
 
 .diagnosis {
   color: white;
+  padding-top: 0px;
 }
 
 .disclaimer {
