logo added, search box looks nice

--- a/app/views/diseases/_disease_result.html.erb
+++ b/app/views/diseases/_disease_result.html.erb
@@ -1,11 +1,12 @@
 
-  <div class="close-out"><%= link_to "X", "/" %></div>
+  <div class="close-out"><%= link_to "x", "/" %></div>
   <div class="result-modal">
   <p>
     <h2 class="diagnosis">OH NO. IT LOOKS LIKE YOU COULD HAVE:</h2>
     <h2><%= link_to @disease_name.upcase, "http://www.wikipedia.org/#{@disease_url}", :target => "blank" %></h2>
   </p>
   <%= image_tag "skull-and-crossbones.png", :id => "skull-image" %>
-  <p class="disclaimer">Disclaimer: This is a humor app. We are not real doctors, and you probably don't have this esoteric disease. But if you are really concerned, please see a real doctor.</p>
+  <p class="disclaimer"><strong>Disclaimer:</strong><br>
+    This is a humor app. We are not real doctors, and you probably don't have this esoteric disease. But if you are really concerned, please see a real doctor.</p>
   <h3 class="try-again-link"><%= link_to "Misdiagnosed? Try again >>", "/" %></h3>
   </div>
