--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,6 +12,27 @@
  *= require jquery.ui.all
  *= require_tree .
  */
+/*
+.btn .btn-primary .btn-lg {
+
+}*/
+
+.logo {
+  font-size: 4em;
+  font: arial-black;
+  color: white;
+  text-shadow:
+    -2px -2px 0 #000,
+    2px -2px 0 #000,
+    -2px 2px 0 #000,
+    2px 2px 0 #000;  
+  padding-bottom: 10px;
+  margin-left: -70px;
+}
+
+#tags {
+  width: 30%;
+}
 
 a:hover {
   text-decoration: none !important;
@@ -26,7 +47,7 @@ a:hover {
  }
 
 .close-out a {
-  color: white;
+  color: gray;
  }
 
 #background-image {
@@ -77,7 +98,10 @@ p {
 
 .disclaimer {
   color: white;
-  text-align: left;
+  text-align: justify;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  line-height: 105%;
 }
 
 .try-again-link {
