--- a/app/views/diseases/index.js.erb
+++ b/app/views/diseases/index.js.erb
@@ -1,4 +1,4 @@
 $(function() {
-  $(".search-form").fadeOut();
-  $("#disease-result").fadeIn().html('<%= j render(:partial => "disease_result") %>');
+  $(".search-form").hide();
+  $("#disease-result").show(1000).html('<%= j render(:partial => "disease_result") %>');
 });
