--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -37,7 +37,7 @@
     -2px -2px 0 #000,
     2px -2px 0 #000,
     -2px 2px 0 #000,
-    2px 2px 0 #000;  
+    2px 2px 0 #000;
   padding-bottom: 20px;
   margin-left: -70px;
 }
@@ -83,11 +83,11 @@ body {
 
 p {
   color: white;
-  opacity: .8;
+  opacity: 1;
 }
 
 #disease-result {
-  background-color: rgba(0,0,0,0.7);
+  background-color: rgba(0,0,0,1);
   width: 55%;
   margin: 0 auto;
   border-radius: 25px;
