--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -91,6 +91,7 @@ p {
   background-color: rgba(0,0,0,0.7);
   width: 55%;
   margin: 0 auto;
+  margin-top: 3%;
   border-radius: 25px;
 }
 
@@ -123,6 +124,13 @@ p {
 
 p {
   font-size: 22px;
+}
+
+.ui-autocomplete {
+  max-height: 200px;
+  overflow-y: hidden;
+  /* prevent horizontal scrollbar */
+  overflow-x: hidden;
 }
 
 @media only screen and (max-width: 450px) {
