change x and new diagnosis links to never reload page

--- a/app/views/diseases/index.js.erb
+++ b/app/views/diseases/index.js.erb
@@ -1,4 +1,12 @@
 $(function() {
   $(".search-form").hide();
   $("#disease-result").hide().html('<%= j render(:partial => "disease_result") %>').fadeIn(900);
+  $(".try-again-link").click(function() {
+    $(".search-form").fadeIn(500);
+    $("#disease-result").hide();
+  });
+  $(".close-out").click(function() {
+    $(".search-form").fadeIn(500);
+    $("#disease-result").hide();
+  });
 });
