--- a/app/views/diseases/index.js.erb
+++ b/app/views/diseases/index.js.erb
@@ -2,10 +2,12 @@ $(function() {
   $(".search-form").hide();
   $("#disease-result").hide().html('<%= j render(:partial => "disease_result") %>').fadeIn(900);
   $(".try-again-link").click(function() {
+    $(".search-query").val("");
     $(".search-form").fadeIn(500);
     $("#disease-result").hide();
   });
   $(".close-out").click(function() {
+    $(".search-query").val("");
     $(".search-form").fadeIn(500);
     $("#disease-result").hide();
   });
