--- a/app/views/diseases/_disease_result.html.erb
+++ b/app/views/diseases/_disease_result.html.erb
@@ -7,6 +7,6 @@
   </p>
   <%= image_tag "skull-and-crossbones.png", :id => "skull-image" %>
   <p class="disclaimer"><strong>Disclaimer:</strong><br>
-    This is a humor app. We are not real doctors, and you probably don't have this esoteric disease. But if you are really concerned, please see a real doctor.</p>
+    This is a humor app. We are not real doctors, and you probably don't have this rare disease. But if you are really concerned, please see a real doctor.</p>
   <h3 class="try-again-link"><%= link_to "Misdiagnosed? Try again >>", "#" %></h3>
   </div>
