--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,6 +17,24 @@
 
 }*/
 
+#copyright {
+ color: white;
+ font-size: 0.8em;
+ text-align: left;
+ padding: 10px;
+ position:absolute;
+ bottom:0px;
+ float: right;
+}
+
+#copyright a {
+ color: white;
+}
+
+#copyright a:hover {
+ color: #005880;
+}
+
 .ui-menu-item {
   zoom: 150%;
 }
