--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,5 +11,7 @@
 <div id="background-image"></div>
 <%= yield %>
 
+
+<div id="copyright">© 2013 The Flatiron School. <a href="https://twitter.com/gregeng" target="blank">Greg Eng</a>, <a href="https://twitter.com/davidhenrybella" target="blank">David Bella</a>, <a href="https://twitter.com/emilyxxie" target="blank">Emily Xie</a></span></div>
 </body>
 </html>
