--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -36,7 +36,7 @@
 }
 
 .ui-menu-item {
-  zoom: 150%;
+  font-size: 1.2em;
 }
 
 .ui-autocomplete {
@@ -146,7 +146,7 @@ p {
 
 .ui-autocomplete {
   max-height: 200px;
-  overflow-y: hidden;
+  overflow-y: auto;
   /* prevent horizontal scrollbar */
   overflow-x: hidden;
 }
