--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -149,6 +149,7 @@ p {
   overflow-y: auto;
   /* prevent horizontal scrollbar */
   overflow-x: hidden;
+  text-align: left;
 }
 
 @media only screen and (max-width: 450px) {
