--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -88,7 +88,7 @@ a:hover {
   bottom: 0;
   right: 0;
 
-  background: url(hospital_bed_blurred_camera_2.jpg);
+  background: image-url(hospital_bed_blurred_camera_2.jpg);
   background-repeat: no-repeat;
   background-position: center center;
   background-attachment: fixed;
