--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,6 @@
 <%= yield %>
 
 
-<div id="copyright">© 2013 The Flatiron School. <a href="https://twitter.com/gregeng" target="blank">Greg Eng</a>, <a href="https://twitter.com/davidhenrybella" target="blank">David Bella</a>, <a href="https://twitter.com/emilyxxie" target="blank">Emily Xie</a></span></div>
+<div id="copyright">Copyright © 2013 - <%= Time.new.year %> <a href="https://twitter.com/gregeng" target="blank">Greg Eng</a>, <a href="https://twitter.com/davidhenrybella" target="blank">David Bella</a>, <a href="https://xie-emily.com" target="blank">Emily Xie</a></span></div>
 </body>
 </html>
